qdrant/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: qdrant
  name: qdrant
  namespace: qdrant
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: qdrant
      port: 6333
      protocol: TCP
      targetPort: qdrant
  selector:
    app.kubernetes.io/name: qdrant
  sessionAffinity: None
  type: ClusterIP
