qdrant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencryptcertmanager
  labels:
    app.kubernetes.io/name: qdrant
  name: qdrant
  namespace: qdrant
spec:
  ingressClassName: nginx
  rules:
    - host: qdrant.crobasaurusrex.ryanbeales.com
      http:
        paths:
          - backend:
              service:
                name: qdrant
                port:
                  number: 5678
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - qdrant.crobasaurusrex.ryanbeales.com
      secretName: qdrant-crobasaurusrex-ryanbeales-com-tls
